--- a/flask_server/static/index.html
+++ b/flask_server/static/index.html
@@ -1,13 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The Movie DB</title>
-  <script type="text/javascript" src="myScript.js"></script>
+  <script type="text/javascript" src="static/index.js"></script>
+  <link rel="stylesheet" type="text/css" href="static/index.css" />
 </head>
+
 <body>
-  <h1>Hello World!</h1>
+  <h3>THE MOVIE DB</h3>
+  <div class="verticalLine">
+    <dl id="drink-menu" style="border:solid 1px #ccc;padding:6px;">
+      <dt>摩卡</dt>
+      <dd>热摩卡咖啡</dd>
+      <dt>酸奶</dt>
+      <dd>北京老酸奶</dd>
+      <dt>果汁</dt>
+      <dd>鲜榨苹果汁</dd>
+    </dl>
+    <div style="height: 2000px;"></div>
+  </div>
+
+  <dl id="drink-menu" style="border:solid 1px #ccc;padding:6px;">
+    <dt>摩卡</dt>
+    <dd>热摩卡咖啡</dd>
+    <dt>酸奶</dt>
+    <dd>北京老酸奶</dd>
+    <dt>果汁</dt>
+    <dd>鲜榨苹果汁</dd>
+  </dl>
+  
+
 </body>
+
 </html>
