practice html布局似乎可行？

--- a/flask_server/static/index.html
+++ b/flask_server/static/index.html
@@ -8,31 +8,34 @@
   <title>The Movie DB</title>
   <script type="text/javascript" src="static/index.js"></script>
   <link rel="stylesheet" type="text/css" href="static/index.css" />
+  <link rel="icon" type="image/png" href="static/img/favicon.ico"/>
 </head>
 
 <body>
-  <h3>THE MOVIE DB</h3>
+  <div class="horizontalGradual">
+    <h3>THE MOVIE DB</h3>
+  </div>
+
   <div class="verticalLine">
-    <dl id="drink-menu" style="border:solid 1px #ccc;padding:6px;">
+    <!-- <dl id="drink-menu" style="border:solid 1px #ccc;padding:6px;">
       <dt>摩卡</dt>
       <dd>热摩卡咖啡</dd>
       <dt>酸奶</dt>
       <dd>北京老酸奶</dd>
       <dt>果汁</dt>
       <dd>鲜榨苹果汁</dd>
-    </dl>
-    <div style="height: 2000px;"></div>
+      <dd>鲜榨苹果汁</dd>
+      <dd>鲜榨苹果汁</dd>
+      <dd>鲜榨苹果汁</dd>
+    </dl> -->
+    <div style="height: 1000px;"></div>
+    <div id="footer">CopyRight@copy2012 </div>
   </div>
-
-  <dl id="drink-menu" style="border:solid 1px #ccc;padding:6px;">
-    <dt>摩卡</dt>
-    <dd>热摩卡咖啡</dd>
-    <dt>酸奶</dt>
-    <dd>北京老酸奶</dd>
-    <dt>果汁</dt>
-    <dd>鲜榨苹果汁</dd>
-  </dl>
   
+  <div class="navBar">
+    <p>Hello ⟶</p>
+    <p>world</p>
+  </div>
 
 </body>
 
