--- a/flask_server/static/index.html
+++ b/flask_server/static/index.html
@@ -16,26 +16,18 @@
     <h3>THE MOVIE DB</h3>
   </div>
 
-  <div class="verticalLine">
-    <!-- <dl id="drink-menu" style="border:solid 1px #ccc;padding:6px;">
-      <dt>摩卡</dt>
-      <dd>热摩卡咖啡</dd>
-      <dt>酸奶</dt>
-      <dd>北京老酸奶</dd>
-      <dt>果汁</dt>
-      <dd>鲜榨苹果汁</dd>
-      <dd>鲜榨苹果汁</dd>
-      <dd>鲜榨苹果汁</dd>
-      <dd>鲜榨苹果汁</dd>
-    </dl> -->
-    <div style="height: 1000px;"></div>
-    <div id="footer">CopyRight@copy2012 </div>
-  </div>
-  
   <div class="navBar">
     <p>Hello ⟶</p>
     <p>world</p>
   </div>
+
+  <div id="container">
+    <section class="main">MAIN</section>
+    <div class="right">
+      <footer>FOOTER</footer>
+    </div>
+  </div>
+  
 
 </body>
 
