--- a/practice/test.html
+++ b/practice/test.html
@@ -8,7 +8,12 @@
 </head>
 <body>
   <header>HEADER</header>
+  <div class="navBar">
+    <p>Hello ⟶</p>
+    <p>world</p>
+  </div>
   <div id="container">
+      
       <section class="main">MAIN</section>
       <footer>FOOTER</footer>
   </div>
