重新设计index页面，目前缩放正常，准备添加nav bar

--- a/flask_server/static/index.html
+++ b/flask_server/static/index.html
@@ -12,18 +12,24 @@
 </head>
 
 <body>
-  <div class="horizontalGradual">
+  <!-- <br> -->
+  <!-- <div class="horizontalGradual">
     <h3>THE MOVIE DB</h3>
-  </div>
+  </div> -->
 
   <div class="navBar">
     <p>Hello ⟶</p>
     <p>world</p>
   </div>
-
+  
   <div id="container">
+    <br>
+    <div class="horizontalGradual">
+      <h3>THE MOVIE DB</h3>
+    </div>
+    
     <section class="main">MAIN</section>
-    <div class="right">
+    <div class="right-text">
       <footer>FOOTER</footer>
     </div>
   </div>
