放弃？左右布局无法实现

--- a/flask_server/static/index.html
+++ b/flask_server/static/index.html
@@ -27,11 +27,19 @@
     <div class="horizontalGradual">
       <h3>THE MOVIE DB</h3>
     </div>
-    
-    <section class="main">MAIN</section>
-    <div class="right-text">
-      <footer>FOOTER</footer>
-    </div>
+
+    <!-- <div id="left-half">
+      <p>Ok</p>
+    </div> -->
+
+    <!-- <div id="right-half"> -->
+      <section class="main">MAIN</section>
+      <!-- <p style="height: 800px; background-color:blue;"></p> -->
+      <div class="right-text">
+        <footer>FOOTER</footer>
+      </div>
+    <!-- </div> -->
+
   </div>
   
 
