目前使用缩放大小的方式显示页面

--- a/flask_server/static/index.html
+++ b/flask_server/static/index.html
@@ -12,10 +12,10 @@
 </head>
 
 <body>
-  <!-- <br> -->
-  <!-- <div class="horizontalGradual">
+  <br>
+  <div class="horizontalGradual">
     <h3>THE MOVIE DB</h3>
-  </div> -->
+  </div>
 
   <div class="navBar">
     <p>Hello ⟶</p>
@@ -23,10 +23,10 @@
   </div>
   
   <div id="container">
-    <br>
+    <!-- <br>
     <div class="horizontalGradual">
       <h3>THE MOVIE DB</h3>
-    </div>
+    </div> -->
 
     <!-- <div id="left-half">
       <p>Ok</p>
