--- a/flask_server/static/index.html
+++ b/flask_server/static/index.html
@@ -18,8 +18,9 @@
   </div>
 
   <div class="navBar">
-    <p>Hello ⟶</p>
-    <p>world</p>
+    <button onclick="toggleHome()">Home ⟶</button>
+    <br>
+    <button onclick="toggleSearch()">Search ⟶</button>
   </div>
   
   <div id="container">
@@ -33,7 +34,9 @@
     </div> -->
 
     <!-- <div id="right-half"> -->
-      <section class="main">MAIN</section>
+      <section hidden class="search">
+          Search
+      </section>
       <!-- <p style="height: 800px; background-color:blue;"></p> -->
       <div class="right-text">
         <footer>FOOTER</footer>
