可以收到XHR，准备加入cors和slide show功能

--- a/flask_server/static/index.html
+++ b/flask_server/static/index.html
@@ -16,6 +16,7 @@
   <div class="horizontalGradual">
     <h3>THE MOVIE DB</h3>
   </div>
+  <!-- <p><textarea style="width:500px;height:200px" id='trending_movie'>trending movie</textarea></p> -->
 
   <div class="navBar">
     <a onclick="toggleHome()" style="cursor: pointer;">Home ⟶</a>
