slidewindows成功，准备注入json数据

--- a/flask_server/static/index.html
+++ b/flask_server/static/index.html
@@ -31,6 +31,21 @@
       </section>
       <section id="home">
         <h1>Trending Movies</h1>
+        <div class="slideshow-container">
+          <p style="text-align:center">Slides</p>
+          <div class="slides fade">
+            <img src="static/img/movie-placeholder.jpg">
+            <div class="caption">Caption 1</div>
+          </div>
+          <div class="slides fade">
+            <img src="static/img/person-placeholder.png">
+            <div class="caption">Caption 2</div>
+          </div>
+          <div class="slides fade">
+            <img src="static/img/poster-placeholder.png">
+            <div class="caption">Caption 3</div>
+          </div>
+        </div>
       </section>
       <div class="right-text">
         <footer>FOOTER</footer>
