slide show part 1 finish

--- a/flask_server/static/index.html
+++ b/flask_server/static/index.html
@@ -6,9 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The Movie DB</title>
-  <script type="text/javascript" src="static/index.js"></script>
   <link rel="stylesheet" type="text/css" href="static/index.css" />
   <link rel="icon" type="image/png" href="static/img/favicon.ico"/>
+  <!-- <script type="text/javascript" src="static/index.js"></script> -->
 </head>
 
 <body>
@@ -30,22 +30,30 @@
         Search
       </section>
       <section id="home">
-        <h1>Trending Movies</h1>
         <div class="slideshow-container">
-          <p style="text-align:center">Slides</p>
+          <p style="padding-left: 335px;">Trending Movies</p>
           <div class="slides fade">
-            <img src="static/img/movie-placeholder.jpg">
+            <img class="movieSlide" src="static/img/movie-placeholder.jpg">
             <div class="caption">Caption 1</div>
           </div>
           <div class="slides fade">
-            <img src="static/img/person-placeholder.png">
+            <img class="movieSlide" src="static/img/movie-placeholder.jpg">
             <div class="caption">Caption 2</div>
           </div>
           <div class="slides fade">
-            <img src="static/img/poster-placeholder.png">
+            <img class="movieSlide" src="static/img/movie-placeholder.jpg">
             <div class="caption">Caption 3</div>
           </div>
+          <div class="slides fade">
+            <img class="movieSlide" src="static/img/movie-placeholder.jpg">
+            <div class="caption">Caption 4</div>
+          </div>
+          <div class="slides fade">
+            <img class="movieSlide" src="static/img/movie-placeholder.jpg">
+            <div class="caption">Caption 5</div>
+          </div>
         </div>
+        <!-- <p style="height: 800px; background-color: blueviolet;"></p> -->
       </section>
       <div class="right-text">
         <footer>FOOTER</footer>
@@ -55,5 +63,6 @@
     
 
 </body>
+<script type="text/javascript" src="static/index.js"></script>
 
 </html>
