change movie slide name to match with slide show 2

--- a/flask_server/static/index.html
+++ b/flask_server/static/index.html
@@ -34,24 +34,47 @@
           <p style="padding-left: 335px;">Trending Movies</p>
           <div class="slides fade">
             <img class="movieSlide" src="static/img/movie-placeholder.jpg">
-            <div class="caption">Caption 1</div>
+            <div class="movieCaption">Caption 1</div>
           </div>
           <div class="slides fade">
             <img class="movieSlide" src="static/img/movie-placeholder.jpg">
-            <div class="caption">Caption 2</div>
+            <div class="movieCaption">Caption 2</div>
           </div>
           <div class="slides fade">
             <img class="movieSlide" src="static/img/movie-placeholder.jpg">
-            <div class="caption">Caption 3</div>
+            <div class="movieCaption">Caption 3</div>
           </div>
           <div class="slides fade">
             <img class="movieSlide" src="static/img/movie-placeholder.jpg">
-            <div class="caption">Caption 4</div>
+            <div class="movieCaption">Caption 4</div>
           </div>
           <div class="slides fade">
             <img class="movieSlide" src="static/img/movie-placeholder.jpg">
-            <div class="caption">Caption 5</div>
+            <div class="movieCaption">Caption 5</div>
           </div>
+        </div>
+        <div class="slideshow-container">
+          <!-- <p style="padding-left: 335px;">TV shows On-Air Today</p> -->
+          <!-- <div class="slides fade">
+            <img class="tvSlide" src="static/img/movie-placeholder.jpg">
+            <div class="tvCaption">Caption 1</div>
+          </div>
+          <div class="slides fade">
+            <img class="tvSlide" src="static/img/movie-placeholder.jpg">
+            <div class="tvCaption">Caption 2</div>
+          </div>
+          <div class="slides fade">
+            <img class="tvSlide" src="static/img/movie-placeholder.jpg">
+            <div class="tvCaption">Caption 3</div>
+          </div>
+          <div class="slides fade">
+            <img class="tvSlide" src="static/img/movie-placeholder.jpg">
+            <div class="tvCaption">Caption 4</div>
+          </div>
+          <div class="slides fade">
+            <img class="tvSlide" src="static/img/movie-placeholder.jpg">
+            <div class="tvCaption">Caption 5</div>
+          </div> -->
         </div>
         <!-- <p style="height: 800px; background-color: blueviolet;"></p> -->
       </section>
