--- a/flask_server/static/index.html
+++ b/flask_server/static/index.html
@@ -53,9 +53,10 @@
             <div class="movieCaption">Caption 5</div>
           </div>
         </div>
+        
         <div class="slideshow-container">
-          <!-- <p style="padding-left: 335px;">TV shows On-Air Today</p> -->
-          <!-- <div class="slides fade">
+          <p style="padding-left: 335px;">TV shows On-Air Today</p>
+          <div class="slides fade">
             <img class="tvSlide" src="static/img/movie-placeholder.jpg">
             <div class="tvCaption">Caption 1</div>
           </div>
@@ -74,7 +75,7 @@
           <div class="slides fade">
             <img class="tvSlide" src="static/img/movie-placeholder.jpg">
             <div class="tvCaption">Caption 5</div>
-          </div> -->
+          </div>
         </div>
         <!-- <p style="height: 800px; background-color: blueviolet;"></p> -->
       </section>
