slide show 完成，响应式完成，开始search part

--- a/flask_server/static/index.html
+++ b/flask_server/static/index.html
@@ -31,7 +31,7 @@
       </section>
       <section id="home">
         <div class="slideshow-container">
-          <p style="padding-left: 335px;">Trending Movies</p>
+          <p style="margin-left: 335px; margin-top: 15px;">Trending Movies</p>
           <div class="slides fade">
             <img class="movieSlide" src="static/img/movie-placeholder.jpg">
             <div class="movieCaption">Caption 1</div>
@@ -53,9 +53,9 @@
             <div class="movieCaption">Caption 5</div>
           </div>
         </div>
-        
+
         <div class="slideshow-container">
-          <p style="padding-left: 335px;">TV shows On-Air Today</p>
+          <p style="margin-left: 310px;">TV shows On-Air Today</p>
           <div class="slides fade">
             <img class="tvSlide" src="static/img/movie-placeholder.jpg">
             <div class="tvCaption">Caption 1</div>
