--- a/flask_server/static/index.html
+++ b/flask_server/static/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The Movie DB</title>
+  <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
   <link rel="stylesheet" type="text/css" href="static/index.css" />
   <link rel="stylesheet" type="text/css" href="static/search.css" />
   <link rel="icon" type="image/png" href="static/img/favicon.ico"/>
@@ -26,19 +27,21 @@
   
   <div id="container">
       <section hidden id="search">
-        <h4 style="position: absolute; left: 250px; top: 15px;">Search</h1>
+        <h4 style="position: absolute; left: 375px; top: 15px;">Search</h1>
         <form id="search-form" style="position: absolute; left: 200px; top: 50px;">
           <label>Keyword<sup class="red-dot">&#8226;</sup></label>
-          <input type="text" id="keyword" class="radius" style="width: 280px; margin-left: 10px; margin-bottom: 12px;"><br>
+          <input type="text" id="keyword" class="radius" style="width: 280px; margin-left: 10px; margin-bottom: 12px; 
+          font-family: 'Roboto', sans-serif; font-size: 11px;"><br>
           <label>Category<sup class="red-dot">&#8226;</sup></label>
-          <select id="category" name="category" class="radius" style="margin-left: 10px; margin-bottom: 12px;">
+          <select id="category" name="category" class="radius" style="margin-left: 10px; margin-bottom: 12px; 
+          font-family: 'Roboto', sans-serif; font-size: 10px;">
               <option value=""></option>
               <option value="movies">Movies</option>
               <option value="tvs">TV Shows</option>
               <option value="multi">Movies and TV Shows</option>
           </select><br>
-          <input type="button" onclick="showResults()" value="Search">
-          <input type="button" onclick="clearText()" value="Clear">
+          <input class="search-button" type="button" onclick="showResults()" value="Search">
+          <input class="search-button" type="button" onclick="clearText()" value="Clear">
           <!-- <input type="text" class="radius" style="width: 250px; margin-left: 10px;"><br> -->
         </form>
       </section>
@@ -97,7 +100,7 @@
         <!-- <p style="height: 800px; background-color: blueviolet;"></p> -->
       </section>
       <div class="right-text">
-        <footer>FOOTER</footer>
+        <footer>Designed and developed by Xirui Zhong<br>Powered by TMDB</footer>
       </div>
     </div>
 
