注入方式显示cast成功，删除动态生成代码

--- a/flask_server/static/index.html
+++ b/flask_server/static/index.html
@@ -118,6 +118,7 @@
       <p id="language"></p>
       
       <h1>Cast</h1>
+      <p id="no-cast">N/A</p>
       <div class="row">
         <div class="column">
           <img class="person-img" src="static/img/person-placeholder.png">
@@ -170,9 +171,9 @@
           <p class="thin-name"></p>
         </div>
       </div>
+
       <h1>Reviews</h1>
 
-      <!-- <p style="height: 400px;"></p> -->
     </div>
 
 </body>
