review注入成功，开始tv

--- a/flask_server/static/index.html
+++ b/flask_server/static/index.html
@@ -173,7 +173,32 @@
       </div>
 
       <h1>Reviews</h1>
-
+      <p id="no-review">N/A</p>
+      <div class="review">
+        <p class="name-date"></p>
+        <p class="rating"></p>
+        <p class="text-overflow comment" ></p>
+      </div>
+      <div class="review">
+        <p class="name-date"></p>
+        <p class="rating"></p>
+        <p class="text-overflow comment" ></p>
+      </div>
+      <div class="review">
+        <p class="name-date"></p>
+        <p class="rating"></p>
+        <p class="text-overflow comment" ></p>
+      </div>
+      <div class="review">
+        <p class="name-date"></p>
+        <p class="rating"></p>
+        <p class="text-overflow comment" ></p>
+      </div>
+      <div class="review">
+        <p class="name-date"></p>
+        <p class="rating"></p>
+        <p class="text-overflow comment" ></p>
+      </div>
     </div>
 
 </body>
