popup style finish, begin nav bar style

--- a/flask_server/static/index.html
+++ b/flask_server/static/index.html
@@ -177,27 +177,27 @@
       <div class="review">
         <p class="name-date"></p>
         <p class="rating"></p>
-        <p class="text-overflow comment" ></p>
+        <p class="inner-text-overflow comment" ></p>
       </div>
       <div class="review">
         <p class="name-date"></p>
         <p class="rating"></p>
-        <p class="text-overflow comment" ></p>
+        <p class="inner-text-overflow comment" ></p>
       </div>
       <div class="review">
         <p class="name-date"></p>
         <p class="rating"></p>
-        <p class="text-overflow comment" ></p>
+        <p class="inner-text-overflow comment" ></p>
       </div>
       <div class="review">
         <p class="name-date"></p>
         <p class="rating"></p>
-        <p class="text-overflow comment" ></p>
+        <p class="inner-text-overflow comment" ></p>
       </div>
       <div class="review">
         <p class="name-date"></p>
         <p class="rating"></p>
-        <p class="text-overflow comment" ></p>
+        <p class="inner-text-overflow comment" ></p>
       </div>
     </div>
 
