nav bar style finish, begin change nav bar clolor

--- a/flask_server/static/index.html
+++ b/flask_server/static/index.html
@@ -19,10 +19,26 @@
   </div>
   <!-- <p><textarea style="width:500px;height:200px" id='trending_movie'>trending movie</textarea></p> -->
 
-  <div class="navBar">
-    <a onclick="toggleHome()" style="cursor: pointer;">Home ⟶</a>
-    <hr />
-    <a onclick="toggleSearch()" style="cursor: pointer">Search ⟶</a>
+  <!-- <div class="navBar">
+    <div id="home-button">
+      <a onclick="toggleHome()" style="cursor: pointer;">
+        Home &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ⟶
+      </a>
+    </div>
+    <br>
+    <a onclick="toggleSearch()" style="cursor: pointer" id="search-button">
+      Search &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ⟶
+    </a>
+  </div> -->
+  <div id="home-button">
+    <a onclick="toggleHome()" style="cursor: pointer;">
+      &nbsp;&nbsp; Home &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ⟶
+    </a>
+  </div>
+  <div id="search-button">
+    <a onclick="toggleSearch()" style="cursor: pointer">
+      &nbsp;&nbsp; Search &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ⟶
+    </a>
   </div>
 
   <div id="container">
