完成作业，开始检查

--- a/flask_server/static/index.html
+++ b/flask_server/static/index.html
@@ -194,26 +194,31 @@
         <p class="name-date"></p>
         <p class="rating"></p>
         <p class="inner-text-overflow comment" ></p>
+        <hr class="solid">
       </div>
       <div class="review">
         <p class="name-date"></p>
         <p class="rating"></p>
         <p class="inner-text-overflow comment" ></p>
+        <hr class="solid">
       </div>
       <div class="review">
         <p class="name-date"></p>
         <p class="rating"></p>
         <p class="inner-text-overflow comment" ></p>
+        <hr class="solid">
       </div>
       <div class="review">
         <p class="name-date"></p>
         <p class="rating"></p>
         <p class="inner-text-overflow comment" ></p>
+        <hr class="solid">
       </div>
       <div class="review">
         <p class="name-date"></p>
         <p class="rating"></p>
         <p class="inner-text-overflow comment" ></p>
+        <hr class="solid">
       </div>
     </div>
 
